--- a/package.json
+++ b/package.json
@@ -27,10 +27,7 @@
   },
   "devDependencies": {
     "@actions/core": "^1.10.1",
-    "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^16.2.1",
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/git": "^10.0.1",
     "@types/jest": "^28.1.6",
     "@types/milliseconds": "0.0.30",
     "@types/node": "^16.11.7",
@@ -38,18 +35,14 @@
     "@typescript-eslint/parser": "^5.32.0",
     "@vercel/ncc": "^0.38.1",
     "axios": "^1.7.4",
-    "dotenv": "8.2.0",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "semantic-release": "^24.1.0",
     "ts-jest": "^28.0.7",
-    "ts-node": "9.0.0",
-    "typescript": "^4.7.4",
-    "yaml-lint": "^1.7.0"
+    "typescript": "^4.7.4"
   },
   "lint-staged": {
     "**/*.ts": [
